complete desktop version final touch

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <!-- Header Part Start Here -->
     <header>
         <nav>
-            <!-- mobile nav  
-              here start-->
+            <!-- mobile nav here start-->
+            <div class="nav-mobile">
+                <i class="fas fa-bars"></i>
+            </div>
             <!-- nav menu left side -->
             <div class="nav-manu">
                 <a href="">Home</a>
