complete desktop version final touc1h

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="name-card">
             <!-- <div class="player"> -->
                 <div>
-                    <img src="images/players/player-1.png" alt="">
+                    <img src="images/players/player-4.png" alt="">
                 </div>
                 <div>
                     <h3>Neymar Jr</h3>
@@ -101,7 +101,7 @@
         <div class="name-card">
             <!-- <div class="player"> -->
                 <div>
-                    <img src="images/players/player-2.png" alt="">
+                    <img src="images/players/player-5.png" alt="">
                 </div>
                 <div>
                     <h3>Lionel Messi</h3>
@@ -112,7 +112,74 @@
         <div class="name-card">
             <!-- <div class="player"> -->
                 <div>
-                    <img src="images/players/player-3.png" alt="">
+                    <img src="images/players/player-6.png" alt="">
+                </div>
+                <div>
+                    <h3>Cristiano Ronaldo</h3>
+                    <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie Portugal  team.</p>
+                </div>
+            <!-- </div> -->
+        </div>
+        <!-- -----------3xtrea 3 players  -->
+        <div class="name-card">
+            <!-- <div class="player"> -->
+                <div>
+                    <img src="images/players/player-7.png" alt="">
+                </div>
+                <div>
+                    <h3>Neymar Jr</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward Brazil national team.</p>
+                </div>
+            <!-- </div> -->
+        </div>
+        <div class="name-card">
+            <!-- <div class="player"> -->
+                <div>
+                    <img src="images/players/player-8.png" alt="">
+                </div>
+                <div>
+                    <h3>Lionel Messi</h3>
+                    <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina team.</p>
+                </div>
+            <!-- </div> -->
+        </div>
+        <div class="name-card">
+            <!-- <div class="player"> -->
+                <div>
+                    <img src="images/players/player-9.png" alt="">
+                </div>
+                <div>
+                    <h3>Cristiano Ronaldo</h3>
+                    <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie Portugal  team.</p>
+                </div>
+            <!-- </div> -->
+        </div>
+        <div class="name-card">
+            <!-- <div class="player"> -->
+                <div>
+                    <img src="images/players/player-10.png" alt="">
+                </div>
+                <div>
+                    <h3>Neymar Jr</h3>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward Brazil national team.</p>
+                </div>
+            <!-- </div> -->
+        </div>
+        <div class="name-card">
+            <!-- <div class="player"> -->
+                <div>
+                    <img src="images/players/player-11.png" alt="">
+                </div>
+                <div>
+                    <h3>Lionel Messi</h3>
+                    <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina team.</p>
+                </div>
+            <!-- </div> -->
+        </div>
+        <div class="name-card">
+            <!-- <div class="player"> -->
+                <div>
+                    <img src="images/players/player-12.png" alt="">
                 </div>
                 <div>
                     <h3>Cristiano Ronaldo</h3>
