--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Header Part End Here -->
 
 
-    <section class="blogs">
+    <article class="blogs">
         <div class="name-card">
             <!-- <div class="player"> -->
                 <div>
@@ -187,8 +187,7 @@
                 </div>
             <!-- </div> -->
         </div>
-    </section>
-
+    </article>
 
 
 
