--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
     <footer>
         <div class="copyright">
             <div><img src="images/Logo.png" alt=""></img></div>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-youtube"></i>
+            <i class="fab fa-instagram"><a href=""></a></i>
+            <i class="fab fa-facebook"><a href=""></a></i>
+            <i class="fab fa-twitter"><a href=""></a></i>
+            <i class="fab fa-youtube"><a href=""></a></i>
             <p> Copyright © 2022 Football </p></div>
     </footer>
 </body>
