--- a/index.html
+++ b/index.html
@@ -249,10 +249,11 @@
     <footer>
         <div class="copyright">
             <div><img src="images/Logo.png" alt=""></img></div>
-            <i class="fab fa-instagram"><a href=""></a></i>
-            <i class="fab fa-facebook"><a href=""></a></i>
-            <i class="fab fa-twitter"><a href=""></a></i>
-            <i class="fab fa-youtube"><a href=""></a></i>
+
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-youtube"></i></a>
             <p> Copyright © 2022 Football </p></div>
     </footer>
 </body>
